test/neg/bug144.scala
trait I;
class C with I with I;
